[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossroads = { git = "https://github.com/pvharmo/crossroads" }
fuser = "0.12.0"
tempfile = "3"
libc = "0.2.51"
tokio = "1.27.0"
derivative = "2.2.0"
serde = "1.0.160"
serde_json = "1.0.96"
directories = "4.0.1"
async-trait = "0.1.68"
